# grpctestify-rust

./: .gitignore  .markdownlint.yaml  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  package-lock.json  package.json  rustfmt.toml  typos.toml
.github/: dependabot.yaml
.github/workflows/: cargo-deny.yaml  cargo-publish.yaml  clippy.yaml  coverage.yaml  deploy.yml  doctest.yaml  homebrew.yaml  markdownlint.yaml  miri.yaml  msrv.yaml  release.yaml  rustfmt.yaml  test-cross.yaml  test.yaml  toml-format.yaml  typos.yaml  yaml-format.yaml
benches/: assertion.rs  common.rs  index.rs  parser.rs  runner_like.rs
crates/apif-assert/: Cargo.toml  README.md
crates/apif-assert/src/: comparator.rs  diff.rs  engine.rs  lib.rs  mod.rs  operators.rs  registry.rs
crates/apif-ast/: Cargo.toml  README.md
crates/apif-ast/src/: assertion_ast.rs  ast.rs  gctf_tokenizer.rs  lib.rs  tokenizer.rs
crates/apif-cfg-runtime/: Cargo.toml
crates/apif-cfg-runtime/src/: lib.rs
crates/apif-diagnostics/: Cargo.toml  README.md
crates/apif-diagnostics/src/: builder.rs  lib.rs  types.rs
crates/apif-execution/: Cargo.toml  README.md
crates/apif-execution/src/: assertion_handler.rs  client.rs  config.rs  error_handler.rs  events.rs  handlers.rs  helpers.rs  lib.rs  model.rs  request_handler.rs  response_handler.rs  validator.rs  workflow.rs
crates/apif-grpc-transport/: Cargo.toml
crates/apif-grpc-transport/src/: client.rs  config.rs  error.rs  lib.rs  transport.rs  types.rs
crates/apif-grpc-transport/src/tonic/: channel.rs  client.rs  codec.rs  descriptor.rs  mod.rs  proxy.rs
crates/apif-optimizer/: Cargo.toml
crates/apif-optimizer/src/: lib.rs
crates/apif-parser/: Cargo.toml  README.md
crates/apif-parser/src/: assertions.rs  builder.rs  content_parser.rs  core.rs  document_splitter.rs  error_recovery.rs  json_mod.rs  json_stream_parser.rs  lib.rs  mod.rs  ternary.rs  ternary_ast.rs  validator.rs
crates/apif-plugins/: Cargo.toml  README.md
crates/apif-plugins/src/: core.rs  email.rs  empty.rs  env.rs  has_value.rs  header_extract.rs  ip.rs  is_base64.rs  is_json.rs  len.rs  lib.rs  macros.rs  regex.rs  schema.rs  timestamp.rs  timing.rs  trailer_extract.rs  type_info.rs  type_methods.rs  url.rs  uuid.rs
crates/apif-plugins/tests/: jaq_composition.rs
crates/apif-query/: Cargo.toml  README.md
crates/apif-query/benches/: query.rs
crates/apif-query/src/: lib.rs
crates/apif-report/: Cargo.toml  README.md
crates/apif-report/src/: console.rs  diagnostics.rs  json.rs  junit.rs  lib.rs  streaming.rs  yaml.rs
crates/apif-semantics/: Cargo.toml
crates/apif-semantics/src/: lib.rs
crates/apif-source-error/: Cargo.toml
crates/apif-source-row/: Cargo.toml
crates/apif-source-row/src/: analyzer.rs  csv.rs  definition.rs  detect.rs  driven.rs  filter.rs  index.rs  index_builder.rs  lib.rs  memory.rs  ndjson.rs  schema.rs  tsv.rs
crates/apif-state/: Cargo.toml  README.md
crates/apif-state/src/: lib.rs  metrics.rs  mod.rs  result.rs
crates/apif-twoq-cache/: Cargo.toml
crates/apif-utils/: Cargo.toml  README.md
crates/apif-utils/src/: ast.rs  coverage.rs  file_utils.rs  gctf_style.rs  lib.rs
crates/cfg-runtime/: Cargo.toml  README.md
crates/source-error/: Cargo.toml  README.md
crates/source-row/: Cargo.toml  README.md
crates/twoq-cache/: Cargo.toml  README.md
docs/: generator.md  index.md
docs/.vitepress/: config.js
docs/advanced/: index.md
docs/development/: index.md
docs/getting-started/: index.md  installation.md
docs/guides/: bench-sources.md  index.md  playground.md  query.md  troubleshooting.md
examples/advanced/: attributes.gctf  bench.gctf  extract-jq-functions.gctf  options.gctf  proto.gctf  redact-sensitive.gctf  tls.gctf
examples/assertions/: response-with-asserts.gctf
examples/basic/: meta-tags-only.gctf  meta.gctf  partial-match.gctf  tolerance.gctf  unary.gctf  with-headers.gctf
examples/error-handling/: expected-error.gctf
examples/multi-document/: auth-flow.gctf  cross-service.gctf  crud-scenario.gctf  variable-chaining.gctf
examples/streaming/: client-streaming.gctf  server-streaming.gctf
examples/variables/: extract-basic.gctf  extract-with-asserts.gctf
src/: config.rs  diagnostics.rs  lib.rs  logging.rs  main.rs  time.rs
src/assert/: comparator.rs  diff.rs  engine.rs  mod.rs  operators.rs
src/bench/: schema.rs
src/cli/: args.rs  mod.rs
src/commands/: bench.rs  bench_compare.rs  call.rs  check.rs  explain.rs  fmt.rs  gen_grpcurl.rs  grpcurl.rs  health.rs  index_cmd.rs  inspect.rs  list.rs  lsp.rs  mod.rs  query_cmd.rs  reflect.rs  run.rs  scaffold.rs  serve.rs
src/diagnostics/: builder.rs  mod.rs
src/execution/: assertion_handler.rs  error_handler.rs  mod.rs  request_handler.rs  response_handler.rs  runner.rs  runner.rs.backup  runner_helpers.rs  validator.rs  workflow_events.rs  workflow_graph.rs
src/grpc/: adapter.rs  channel.rs  client.rs  grpcurl_invocation.rs  mod.rs  proxy.rs  tls.rs  ua_interceptor.rs  web.rs
src/lsp/: document_symbols.rs  folding_ranges.rs  handlers.rs  inlay_hints.rs  mod.rs  position.rs  semantic_tokens.rs  server.rs  variable_definition.rs
src/optimizer/: mod.rs
src/parser/: assertion_ast.rs  assertions.rs  ast.rs  core.rs  (+13 more)
tests/: allure_contract_test.rs  allure_reporter_tests.rs  call_tests.rs  command_contract_test.rs  config_defaults.rs  connect_integration.rs  diagnostics_tests.rs  explain_tests.rs  extract_metadata_tests.rs  extract_ternary_tests.rs  extract_tests.rs  fmt_tests.rs  gen_command_tests.rs  grpc_web_integration.rs  grpcurl_tests.rs  inspect_tests.rs  integration_test.rs  lazy_connection.rs  lsp_server_tests.rs  lsp_variable_definition_integration_tests.rs  lsp_variable_definition_tests.rs  lsp_variable_tests.rs  parser_tests.rs  perf_ast_tests.rs  perf_tests.rs  plugins_test.rs  query_command_tests.rs  report_tests.rs  runner_tests.rs  security_tests.rs  serve_tests.rs  string_math_tests.rs  ternary_ast_tests.rs  workflow_tests.rs  write_mode_tests.rs
tools/: README.md
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+178 files in other folders)
