[workspace]
resolver = "2"
members = [
  "crates/apif-twoq-cache",
  "crates/apif-source-row",
  "crates/apif-source-error",
  "crates/apif-cfg-runtime",
  "crates/apif-query",
  "crates/apif-semantics",
  "crates/apif-optimizer",
  "crates/apif-diagnostics",
  "crates/apif-ast",
  "crates/apif-parser",
  "crates/apif-assert",
  "crates/apif-state",
  "crates/apif-plugins",
  "crates/apif-execution",
  "crates/apif-utils",
  "crates/apif-report",
  "crates/apif-grpc-transport",
]

[workspace.package]
version = "1.8.9"
edition = "2024"
authors = ["bavix"]
license = "MIT"
repository = "https://github.com/gripmock/grpctestify-rust"
readme = "README.md"
rust-version = "1.97"

[workspace.dependencies]
async-trait = "0.1"

# CLI
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.52", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
prost-reflect = { version = "0.16", features = ["serde"] }
tonic-reflection = "0.14.5"

# JSON/YAML
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
minijinja = "2.6"

# TLS
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "logging",
  "std",
  "tls12",
] }

# Regular expressions
regex = "1.12"

# UUID validation
uuid = { version = "1.23", features = ["v4", "v5", "serde"] }

# Timestamp
chrono = "0.4"

# Email validation
email_address = "0.2"

# URL parsing
url = "2.5"


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration

# File operations
walkdir = "2.5"
globset = "0.4"
ignore = "0.4"

# System info
sysinfo = "0.39"

# Memory-mapped files
memmap2 = "0.9"

# JQ
jaq-core = "3.1"
jaq-std = "3.0"
jaq-json = { version = "2.0", features = ["serde"] }

# File system
crc32fast = "1.5"

# JSON Schema
jsonschema = "0.47"

# Fake data generation
fake = "5.1"

# HTTP/1.1 client for gRPC-Web / ConnectRPC
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "http2",
] }

# Web UI (play command)
axum = "0.8"
tower-http = { version = "0.7", features = ["cors", "fs", "trace"] }
rust-embed = "8"
mime_guess = "2"

[package]
name = "grpctestify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC testing utility written in Rust"
rust-version.workspace = true
autobenches = false

[[bin]]
name = "grpctestify"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# Error handling
anyhow = { workspace = true }
async-trait = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Pure-Rust protobuf compiler (for proto file support)
protox = "0.9"

# File watching for play mode auto-reload
notify = "8"

# gRPC
tonic = { workspace = true, features = [
  "tls-ring",
  "tls-native-roots",
  "transport",
  "gzip",
] }
tonic-prost = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { workspace = true }

# JSON/YAML
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
minijinja = { workspace = true }

# TLS
rustls = { workspace = true }

# UUID validation
uuid = { workspace = true }

# Timestamp
chrono = { workspace = true }

# URL parsing
url = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = "0.18"
console = "0.16"

# Configuration

# File operations
walkdir = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
sysinfo = { workspace = true }
memmap2 = { workspace = true }
crc32fast = { workspace = true }
apif-twoq-cache = { path = "crates/apif-twoq-cache", version = "0.1.0" }
apif-source-row = { path = "crates/apif-source-row", version = "0.2.0" }
apif-source-error = { path = "crates/apif-source-error", version = "0.1.0" }
apif-cfg-runtime = { path = "crates/apif-cfg-runtime", version = "0.1.0" }
apif-diagnostics = { path = "crates/apif-diagnostics", version = "0.1.0" }
apif-parser = { path = "crates/apif-parser", version = "0.1.0" }
apif-assert = { path = "crates/apif-assert", version = "0.1.0" }
apif-state = { path = "crates/apif-state", version = "0.1.0" }
apif-plugins = { path = "crates/apif-plugins", version = "0.1.0" }
apif-execution = { path = "crates/apif-execution", version = "0.2.0" }
apif-utils = { path = "crates/apif-utils", version = "0.2.0" }
apif-report = { path = "crates/apif-report", version = "0.2.0" }
apif-semantics = { path = "crates/apif-semantics", version = "0.1.0" }
apif-optimizer = { path = "crates/apif-optimizer", version = "0.1.0" }
apif-query = { path = "crates/apif-query", version = "0.1.0" }
apif-grpc-transport = { path = "crates/apif-grpc-transport", version = "0.2.0", features = [
  "tonic-transport",
] }
csv = "1.3"
rand = "0.10"
prost-reflect.workspace = true
futures = "0.3"
tower-lsp = "0.20"
rustyline = { version = "18", features = ["derive"] }
reqwest = { workspace = true }
axum = { workspace = true }
fake = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }


[[test]]
name = "explain"
path = "tests/explain_tests.rs"
harness = true

[[test]]
name = "inspect"
path = "tests/inspect_tests.rs"
harness = true

[[test]]
name = "workflow"
path = "tests/workflow_tests.rs"
harness = true

[[test]]
name = "extract"
path = "tests/extract_tests.rs"
harness = true

[[test]]
name = "extract_metadata"
path = "tests/extract_metadata_tests.rs"
harness = true

[[test]]
name = "extract_ternary"
path = "tests/extract_ternary_tests.rs"
harness = true

[[test]]
name = "ternary_ast"
path = "tests/ternary_ast_tests.rs"
harness = true

[[test]]
name = "fmt"
path = "tests/fmt_tests.rs"
harness = true

[[test]]
name = "lsp_variable"
path = "tests/lsp_variable_tests.rs"
harness = true

[[test]]
name = "lsp_variable_definition"
path = "tests/lsp_variable_definition_tests.rs"
harness = true

[[test]]
name = "lsp_variable_definition_integration"
path = "tests/lsp_variable_definition_integration_tests.rs"
harness = true

[[test]]
name = "report"
path = "tests/report_tests.rs"
harness = true

[[bin]]
name = "test-server"
path = "tests/servers/bin.rs"
required-features = ["test-servers"]

[features]
default = []
ast-optimizer = []
proto-build = [
  "dep:tonic-prost",
  "dep:tonic-prost-build",
  "dep:protoc-bin-vendored",
]
test-servers = [
  "dep:tonic-prost",
  "dep:tonic-prost-build",
  "dep:protoc-bin-vendored",
]

[build-dependencies]
tonic-prost-build = { version = "0.14.5", optional = true }
protoc-bin-vendored = { version = "3", optional = true }

[dev-dependencies]
# Testing
tempfile = "3.27"
uuid = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "assertion"
harness = false

[[bench]]
name = "runner_like"
harness = false

[[bench]]
name = "index"
harness = false

[package.metadata.cargo-machete]
# Used only in feature-gated proto generation paths (`proto-build`, `test-servers`)
# and referenced by generated code.
ignored = ["tonic-prost", "tonic-prost-build", "protoc-bin-vendored"]
