[package]
name = "apif-assert"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Assertion engine for .apif/.gctf test files"

[dependencies]
apif-ast = { path = "../apif-ast", version = "0.1.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true }
console = "0.16"
dissimilar = "1.0"
regex = { workspace = true }

[dev-dependencies]
