[package]
name = "apif-ast"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "AST types for .apif/.gctf test files"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
