[package]
name = "apif-ast"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "AST types for .apif/.gctf test files"

[dependencies]
apif-cfg-runtime = { path = "../apif-cfg-runtime", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
