[package]
name = "apif-cfg-runtime"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Runtime capabilities and clock abstraction"

[dependencies]
chrono = { workspace = true }
