[package]
name = "apif-diagnostics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Diagnostic types and builders for APIF file validation"

[dependencies]
serde = { workspace = true }
