[package]
name = "apif-execution"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protocol-agnostic test execution engine for .apif/.gctf files"

[dependencies]
apif-ast = { path = "../apif-ast", version = "0.1.0" }
apif-assert = { path = "../apif-assert", version = "0.1.0" }
apif-state = { path = "../apif-state", version = "0.1.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = "0.3"
async-trait = "0.1"
