[package]
name = "apif-grpc-transport"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "gRPC transport abstraction layer — contracts for gRPC calls"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
tokio = { workspace = true }
async-trait = "0.1"

tonic = { workspace = true, features = [
  "tls-ring",
  "tls-native-roots",
  "transport",
  "gzip",
], optional = true }
tonic-reflection = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-reflect = { workspace = true, features = ["serde"], optional = true }
prost-types = { workspace = true, optional = true }
protox = { version = "0.9", optional = true }
tracing = { workspace = true, optional = true }
rand = { version = "0.10", optional = true }

[features]
default = []
tonic-transport = [
  "dep:tonic",
  "dep:tonic-reflection",
  "dep:prost",
  "dep:prost-reflect",
  "dep:prost-types",
  "dep:protox",
  "dep:tracing",
  "dep:rand",
]
