[package]
name = "apif-optimizer"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Assertion rewriting engine for .gctf test files"

[dependencies]
apif-parser = { path = "../apif-parser", version = "0.2.0" }
apif-plugins = { path = "../apif-plugins", version = "0.2.0" }
apif-semantics = { path = "../apif-semantics", version = "0.1.0" }
apif-utils = { path = "../apif-utils", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
apif-assert = { path = "../apif-assert", version = "0.2.0" }
