[package]
name = "apif-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Parser for .apif/.gctf test file format"

[dependencies]
apif-ast = { path = "../apif-ast" }
apif-diagnostics = { path = "../apif-diagnostics" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
json5 = "1.3.1"

[dev-dependencies]
cfg-runtime = { path = "../cfg-runtime" }
