[package]
name = "apif-parser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Parser for .apif/.gctf test file format"

[dependencies]
apif-ast = { path = "../apif-ast", version = "0.1.0" }
apif-diagnostics = { path = "../apif-diagnostics", version = "0.1.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
json5 = "1.3.1"

[dev-dependencies]
cfg-runtime = { path = "../cfg-runtime", version = "0.1.0" }
