[package]
name = "apif-plugins"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Assertion plugins for .apif/.gctf test files"

[dependencies]
apif-assert = { path = "../apif-assert", version = "0.1.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
email_address = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
jsonschema = { workspace = true }

[dev-dependencies]
