[package]
name = "apif-query"
version = "0.1.0"
edition = "2021"
description = "Query DSL parser for APIF data sources"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "query"
harness = false
