[package]
name = "apif-query"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Query DSL parser for APIF data sources"

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "query"
harness = false
