[package]
name = "apif-report"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Reporters for .apif/.gctf test results"

[dependencies]
apif-state = { path = "../apif-state", version = "0.1.0" }
anyhow = { workspace = true }
apif-cfg-runtime = { path = "../apif-cfg-runtime", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tracing = { workspace = true }
indicatif = "0.18"

[dev-dependencies]
