[package]
name = "apif-semantics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Semantic type checking for .gctf assertion expressions"

[dependencies]
apif-parser = { path = "../apif-parser" }
apif-plugins = { path = "../apif-plugins" }
apif-utils = { path = "../apif-utils" }
serde = { workspace = true }
