[package]
name = "apif-semantics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Semantic type checking for .gctf assertion expressions"

[dependencies]
apif-parser = { path = "../apif-parser", version = "0.1.0" }
apif-plugins = { path = "../apif-plugins", version = "0.1.0" }
apif-utils = { path = "../apif-utils", version = "0.2.0" }
serde = { workspace = true }
