[package]
name = "apif-source-row"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Row-oriented data structures and source readers for CSV/TSV/NDJSON sources"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
csv = "1.3"
rand = "0.10"
crc32fast = { workspace = true }
tracing = { workspace = true }
memmap2 = { workspace = true }
sysinfo = { workspace = true }

apif-source-error = { path = "../apif-source-error", version = "0.1.0" }
apif-twoq-cache = { path = "../apif-twoq-cache", version = "0.1.0" }
apif-utils = { path = "../apif-utils", version = "0.2.0" }
apif-ast = { path = "../apif-ast", version = "0.1.0" }
apif-parser = { path = "../apif-parser", version = "0.1.0" }
