[package]
name = "apif-state"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Test state and result types for .apif/.gctf test files"

[dependencies]
apif-ast = { path = "../apif-ast", version = "0.2.0" }
apif-cfg-runtime = { path = "../apif-cfg-runtime", version = "0.1.0" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
