[package]
name = "apif-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Utility functions for .apif/.gctf test file processing"

[dependencies]
anyhow = { workspace = true }
prost-reflect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
rand = "0.10"
